added deploy script, swagger for generating api, connection beetween db and models, response classes